<resources>
    <string name="app_name">Moveous</string>
    <string name="app_logo">App Logo</string>
    <string name="hello_world">Hello World</string>
    <string name="title_favorite">Favorite</string>
    <string name="movie_title">Movie</string>
    <string name="tv_title">TV</string>
    <string name="favorite_title">Favorite</string>
    <string name="title">Title</string>
    <string name="lorem_ipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="rating">Rating</string>
    <string name="language">Language</string>
    <string name="english_lang">English</string>
    <string name="release_date">Release Date</string>
    <string name="overview">Overview</string>
</resources>