<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/appbarHeight"
    android:layout_marginBottom="@dimen/bottomNavHeight">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_details"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="10dp">

        <View
            android:id="@+id/bg_top"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:background="#107896"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_background"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:alpha="0.5"
            android:background="@color/colorBackground"
            android:contentDescription="@null"
            android:scaleType="centerCrop"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="125dp"
            android:layout_height="199dp"
            android:layout_marginStart="15dp"
            android:layout_marginTop="55dp"
            android:contentDescription="@null"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/textView"
            style="@style/TextContent.ExtraLarge"
            android:layout_width="wrap_content"
            android:layout_marginStart="0dp"
            android:layout_marginTop="50dp"
            android:layout_toEndOf="@+id/img_poster"
            android:text="@string/title"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txt_title"
            style="@style/TextContent.Small"
            android:layout_width="0dp"
            android:layout_below="@+id/textView"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/img_poster"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView" />

        <TextView
            android:id="@+id/textView2"
            style="@style/TextContent.ExtraLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/txt_title"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/img_poster"
            android:text="@string/rating"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/txt_title" />

        <TextView
            android:id="@+id/txt_rating"
            style="@style/TextContent.Small"
            android:layout_width="0dp"
            android:layout_below="@+id/textView2"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/img_poster"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView2" />

        <TextView
            android:id="@+id/textView3"
            style="@style/TextContent.ExtraLarge"
            android:layout_width="wrap_content"
            android:layout_below="@+id/txt_rating"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/img_poster"
            android:text="@string/language"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/txt_rating" />

        <TextView
            android:id="@+id/txt_language"
            style="@style/TextContent.Small"
            android:layout_width="0dp"
            android:layout_below="@+id/textView3"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/img_poster"
            android:text="@string/english_lang"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView3" />

        <TextView
            android:id="@+id/textView4"
            style="@style/TextContent.ExtraLarge"
            android:layout_width="wrap_content"
            android:layout_below="@+id/txt_language"
            android:layout_marginStart="0dp"
            android:layout_marginTop="8dp"
            android:layout_toEndOf="@+id/img_poster"
            android:text="@string/release_date"
            android:textSize="16sp"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/txt_language" />

        <TextView
            android:id="@+id/txt_release_date"
            style="@style/TextContent.Small"
            android:layout_width="0dp"
            android:layout_below="@+id/textView4"
            android:layout_gravity="bottom"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="5dp"
            android:layout_toEndOf="@+id/img_poster"
            android:text="@string/title"
            android:textAppearance="@style/TextAppearance.AppCompat.Small"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/img_poster"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            app:cardCornerRadius="4dp"
            app:cardElevation="0dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bg_top">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:text="@string/overview"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/txt_overview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="40dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/lorem_ipsum"
                android:textColor="@android:color/black"
                android:textSize="14sp"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />
        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>